--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "thonglor-life",
   "version": "",
-  "description": "",
+  "description": "For anyone who live on thonglor, map that have many markers for helping you to find the place you want (especially food :))",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,9 +10,10 @@
     "url": "git+https://github.com/jojoee/thonglor-life.git"
   },
   "keywords": [
-    "thonglor"
+    "thonglor",
+    "map"
   ],
-  "author": "Jojoee",
+  "author": "Nathachai Thongniran",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/jojoee/thonglor-life/issues"
