--- a/gulpfile.js/config.json
+++ b/gulpfile.js/config.json
@@ -6,7 +6,7 @@
       "dest": "app/css",
       "opt": {
         "sourceComments": false,
-        "outputStyle": "compressed"
+        "outputStyle": "expanded"
       },
       "browserSyncOpt": {
         "once": true
@@ -16,7 +16,7 @@
     "serve": {
       "watch": {
         "html": "app/index.html",
-        "js": "app/js/*.js",
+        "js": "app/**/*.js",
         "sass": "app/scss/*.scss"
       },
       "browserSyncInit": {
